crates/nash-solve/tests/snapshots/inference__builtin_constructors_match_conditions_and_data_fields.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nchoice flag = if flag then True else False\ninvert flag =\n    case flag of\n        False -> True\n        True -> False\nrewrap data =\n    case data of\n        Constr pair(tag, fields) -> Builtin.constrData tag fields\n        Map pairs -> Map pairs\n        List values -> List values\n        I n -> I n\n        B payload -> B payload\ninteger n = I n\nbytes b = B b\n"
---
bytes : bytes -> Data
choice : forall a. FromBool a => bool -> a
integer : int -> Data
invert : forall a. FromBool a => bool -> a
rewrap : Data -> Data
