crates/nash-solve/tests/snapshots/inference__builtin_list_rejects_function_elements.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Builtin\nbad xs = Builtin.mkCons (\\x -> x) xs\n"
info: diagnostic
---
nash::type::missing_impl

  × Unsatisfied representation constraint `Primitive.Storable ('a -> 'a)`.
   ╭─[Main.nash:3:10]
 2 │ import Builtin
 3 │ bad xs = Builtin.mkCons (\x -> x) xs
   ·          ───────┬──────
   ·                 ╰── required by `type application`
   ╰────
  help: Requirement chain:

            forming list ('a -> 'a)

        Use a type with Big or Const representation; an impl cannot change representation.


nash::type::missing_impl

  × Unsatisfied representation constraint `Primitive.Storable ('a -> 'a)`.
   ╭─[Main.nash:3:10]
 2 │ import Builtin
 3 │ bad xs = Builtin.mkCons (\x -> x) xs
   ·          ───────┬──────
   ·                 ╰── required by `mkCons`
   ╰────
  help: Use a type with Big or Const representation; an impl cannot change representation.
