crates/nash-solve/tests/snapshots/inference__builtin_pair_accessor_alias.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype alias entry 'a = pair int 'a\nvalue : entry bytes -> bytes\nvalue = .snd\n"
---
value : entry bytes -> bytes
