crates/nash-solve/tests/snapshots/inference__builtin_pair_accessor_remains_ambiguous.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nf = .fst\n"
info: diagnostic
---
nash::type::ambiguous_record_access

  × Cannot determine record type `'a`.
   ╭─[Main.nash:2:5]
 1 │ module Main exposing (..)
 2 │ f = .fst
   ·     ──┬─
   ·       ╰── field `fst` accessor
   ╰────
  help: Add a type annotation that identifies the record.
